dovecot/dovecot-pigeonhole/tests/execute/errors/action-duplicates.sieve
require "reject";

reject "Message is not appreciated.";
reject "No, really, it is not appreciated.";
